--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoundTableExperiments"
+        android:theme="@style/MainTheme"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".EntryPointActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.RoundTableExperiments">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HelloComposeWorldActivity"
+            android:theme="@style/Theme.RoundTableExperiments"/>
     </application>
 
 </manifest>
