--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "RoundTableExperiments"
 include ':app'
 include ':compose'
+include ':compose_courses'
