--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".EntryPointActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HelloComposeWorldActivity"
-            android:theme="@style/Theme.RoundTableExperiments"/>
     </application>
 
 </manifest>
