--- a/compose_courses/build.gradle
+++ b/compose_courses/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.slvmk.compose_courses'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -44,7 +44,7 @@ dependencies {
 
     // Import the Compose BOM
     def composeBom = platform('androidx.compose:compose-bom:2023.05.00')
-    implementation 'androidx.compose:compose-bom:2023.09.00'
+    implementation composeBom
 
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation 'androidx.navigation:navigation-compose:2.7.2'
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.compose:compose-bom:2023.09.00'
+    androidTestImplementation composeBom
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.7.2'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
