--- a/compose_courses/src/main/AndroidManifest.xml
+++ b/compose_courses/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         <activity android:name=".google.basic.dogs.DogsListActivity"/>
+        <activity android:name=".google.basic.marsphotos.MarsPhotoActivity"/>
     </application>
 </manifest>
