--- a/compose_courses/build.gradle
+++ b/compose_courses/build.gradle
@@ -45,10 +45,10 @@ dependencies {
 
     // Import the Compose BOM
     def composeBom = platform('androidx.compose:compose-bom:2023.09.00')
-    implementation composeBom
+    implementation 'androidx.compose:compose-bom:2023.09.02'
 
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation 'androidx.navigation:navigation-compose:2.7.2'
+    implementation 'androidx.navigation:navigation-compose:2.7.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
@@ -65,16 +65,16 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation "androidx.compose.ui:ui-tooling"
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material3:material3:1.1.2'
     implementation "androidx.compose.material3:material3-window-size-class"
     implementation "androidx.compose.material:material-icons-extended"
 
-    implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
+    implementation 'com.google.accompanist:accompanist-themeadapter-material:0.32.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation composeBom
+    androidTestImplementation 'androidx.compose:compose-bom:2023.09.02'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    androidTestImplementation 'androidx.navigation:navigation-testing:2.7.2'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.7.3'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
