add new architecture module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':compose'
 include ':compose_courses'
 include ':myapplication'
 include ':jack_experiment'
+include ':architecture_samples'
