--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':compose_courses'
 include ':myapplication'
 include ':jack_experiment'
 include ':architecture_samples'
+include ':coroutines_and_flows'
