add onboarding use case

--- a/compose_courses/src/main/AndroidManifest.xml
+++ b/compose_courses/src/main/AndroidManifest.xml
@@ -7,5 +7,6 @@
         <activity android:name=".google.basic.dogs.DogsListActivity"/>
         <activity android:name=".google.basic.marsphotos.MarsPhotoActivity"/>
         <activity android:name=".google.basic.cupcake.ui.CupcakeActivity"/>
+        <activity android:name=".google.medium.OnboardingScreenActivity"/>
     </application>
 </manifest>
