add compose view case

--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -4,5 +4,6 @@
     <application
         android:allowBackup="true">
         <activity android:name=".HelloComposeWorldActivity"/>
+        <activity android:name=".ComposeViewUseCaseActivity"/>
     </application>
 </manifest>
