--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -5,5 +5,6 @@
         android:allowBackup="true">
         <activity android:name=".HelloComposeWorldActivity"/>
         <activity android:name=".ComposeViewUseCaseActivity"/>
+        <activity android:name=".AndroidViewUseCaseActivity"/>
     </application>
 </manifest>
