--- a/compose_courses/build.gradle
+++ b/compose_courses/build.gradle
@@ -44,8 +44,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     // Import the Compose BOM
-    def composeBom = platform('androidx.compose:compose-bom:2023.09.00')
-    implementation 'androidx.compose:compose-bom:2023.10.01'
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
 
     implementation 'androidx.activity:activity-compose:1.8.1'
     implementation 'androidx.navigation:navigation-compose:2.7.5'
@@ -72,7 +71,7 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-themeadapter-material:0.32.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.compose:compose-bom:2023.10.01'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.7.5'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
