--- a/jack_experiment/build.gradle
+++ b/jack_experiment/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -47,7 +47,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.compose:compose-bom:2023.10.01'
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
 
     implementation 'androidx.activity:activity-compose:1.8.1'
     implementation 'androidx.navigation:navigation-compose:2.7.5'
@@ -70,7 +70,7 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-themeadapter-material:0.32.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.compose:compose-bom:2023.10.01'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.7.5'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
