--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.8.1'
 
+    implementation "com.google.accompanist:accompanist-navigation-material:0.33.2-alpha"
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation platform('androidx.compose:compose-bom:2023.10.01')
