add restaurants demo module

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':myapplication'
 include ':jack_experiment'
 include ':architecture_samples'
 include ':coroutines_and_flows'
+include ':restaurants_demo'
