update androidx work library

--- a/jack_experiment/build.gradle
+++ b/jack_experiment/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -90,5 +90,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
     // Work testing
-    androidTestImplementation 'androidx.work:work-testing:2.8.1'
+    androidTestImplementation 'androidx.work:work-testing:2.9.0'
 }
