update accomponist library

--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.8.2'
 
-    implementation "com.google.accompanist:accompanist-navigation-material:0.33.2-alpha"
+    implementation 'com.google.accompanist:accompanist-navigation-material:0.34.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
