--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         glideVersion = '4.16.0'
         hilt_version = '2.49'
         coroutinesVersion = '1.7.3'
+        composeBomVersion = '2024.02.01'
         lifecycle_version = '2.6.2'
         fragmentVersion = '1.6.2'
     }
