--- a/jack_experiment/build.gradle
+++ b/jack_experiment/build.gradle
@@ -45,7 +45,7 @@ android {
 
 dependencies {
 
-    implementation platform('androidx.compose:compose-bom:2024.02.00')
+    implementation platform("androidx.compose:compose-bom:$composeBomVersion")
 
     implementation 'androidx.activity:activity-compose:1.8.2'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
@@ -68,7 +68,7 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-themeadapter-material:0.34.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.02.00')
+    androidTestImplementation platform("androidx.compose:compose-bom:$composeBomVersion")
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.7.7'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
