--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        accompanistVersion = '0.34.0'
         retrofitVersion = "2.9.0"
         glideVersion = '4.16.0'
         hilt_version = '2.49'
         coroutinesVersion = '1.7.3'
         composeBomVersion = '2024.02.01'
-        lifecycle_version = '2.6.2'
+        lifecycleVersion = '2.7.0'
         fragmentVersion = '1.6.2'
     }
     dependencies {
@@ -14,8 +15,8 @@ buildscript {
     }
 }
 plugins {
-    id 'com.android.application' version '8.2.0' apply false
-    id 'com.android.library' version '8.2.0' apply false
+    id 'com.android.application' version '8.2.2' apply false
+    id 'com.android.library' version '8.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.devtools.ksp' version '1.9.21-1.0.15' apply false
 }
