--- a/compose_courses/build.gradle
+++ b/compose_courses/build.gradle
@@ -48,10 +48,10 @@ dependencies {
 
     implementation 'androidx.activity:activity-compose:1.8.2'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -68,7 +68,7 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class"
     implementation "androidx.compose.material:material-icons-extended"
 
-    implementation 'com.google.accompanist:accompanist-themeadapter-material:0.34.0'
+    implementation "com.google.accompanist:accompanist-themeadapter-material:$accompanistVersion"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation platform("androidx.compose:compose-bom:$composeBomVersion")
