--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,15 @@ buildscript {
         composeBomVersion = '2024.02.01'
         lifecycleVersion = '2.7.0'
         fragmentVersion = '1.6.2'
+        gradleVersion = '8.3.0-rc02'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 plugins {
-    id 'com.android.application' version '8.2.2' apply false
-    id 'com.android.library' version '8.2.2' apply false
+    id 'com.android.application' version "$gradleVersion" apply false
+    id 'com.android.library' version "$gradleVersion" apply false
     id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.devtools.ksp' version '1.9.21-1.0.15' apply false
 }
